--- a/frontend/DeLey/package.json
+++ b/frontend/DeLey/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/inconsolata": "^0.4.2",
+    "@expo-google-fonts/quantico": "^0.2.3",
     "@expo-google-fonts/quicksand": "^0.4.1",
     "@expo-google-fonts/saira": "^0.4.2",
     "@expo-google-fonts/underdog": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
+    "@faker-js/faker": "^9.9.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -24,6 +26,7 @@
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-splash-screen": "~31.0.13",
@@ -31,14 +34,16 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "lucide-react-native": "^0.456.0",
+    "moti": "^0.29.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
+    "react-native-web": "^0.21.2",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
