feat: extract pdf metadato on json

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,17 @@
 fastapi
 uvicorn[standard]
 pydantic
+pydantic-settings
 langchain
 openai
+
+# PDF Processing
+PyMuPDF
+pdfplumber
+
+# Embeddings & Vector Store
+sentence-transformers
+faiss-cpu
+
+# Utils
+python-dotenv
