chore: update .gitignore and add .env.example comments for development

--- a/audio-service/.env.example
+++ b/audio-service/.env.example
@@ -1,3 +1,5 @@
+# Solicitar al encargado el archivo .env y el archivo google-credentials.json para probar el modulo de audio.
+
 # ============================================
 # AUDIO SERVICE - ENVIRONMENT VARIABLES
 # ============================================
