feat: module for llm service with gemini

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,8 @@ pydantic-settings
 langchain
 openai
 
-# Google Gemini (alternativa a OpenAI)
-google-generativeai
+# Google Gemini (nuevo SDK oficial)
+google-genai
 
 # PDF Processing
 PyMuPDF
