--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,17 @@
-FROM python:3.14-slim
+FROM python:3.12-slim
 
+# Crear directorio de trabajo
+WORKDIR /app
 
-# Create app directory  
-WORKDIR app/
+# Copiar requirements primero (para cachear dependencias)
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
+# Copiar el resto del código
 COPY . .
 
-RUN pip   install -r requirements.txt
+# Puerto que usa FastAPI
+EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--reload"]
+# Comando para ejecutar la app
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
