--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,8 +10,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copiar el resto del código
 COPY . .
 
-# Puerto que usa FastAPI
-EXPOSE 8000
+# Puerto por defecto (Cloud Run inyecta PORT)
+EXPOSE 8080
 
-# Comando para ejecutar la app
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Comando para ejecutar la app (lee PORT del entorno, default 8080)
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8080}"]
