--- a/frontend/DeLey/app.json
+++ b/frontend/DeLey/app.json
@@ -43,7 +43,7 @@
     ],
     "experiments": {
       "typedRoutes": true,
-      "reactCompiler": false
+      "reactCompiler": true
     },
     "extra": {
       "router": {},
